Layout Shifting Fixed On Sticky Header

--- a/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
+++ b/packages/Webkul/Velocity/src/Resources/assets/sass/components/app.scss
@@ -1747,9 +1747,15 @@
     min-height: 65vh;
     position: relative;
 }
+
 .main-container-wrapper {
+    /**
+     * Sticky header for logo and search component. Just make sure
+     * this class should have height otherwise CLS score will reduce.
+     */
     .sticky-header {
         top: 0px;
+        height: 55px;
         z-index: 100;
         position: sticky;
         background: white;
@@ -1759,7 +1765,6 @@
         }
     }
 }
-
 
 .search-container {
     padding: 30px 20px;
